# BharatTutor

./: .dockerignore  .env  .env.example  .gitignore  .replit  Dockerfile  README.md  app.py  conversation_memory.py  docker-compose.yml  gemini_client.py  knowledge_base.py  pyproject.toml  quiz_generator.py  replit.md  requirements.txt  setup.sh  styles.css  test_api.py
attached_assets/: Pasted-End-to-End-AI-Project-Idea-AI-Tutor-for-Indian-Students-I-want-to-develop-a-complete-end-to-end--1753634172276_1753634172277.txt
modules/: gemini_client.py  quiz_generator.py
static/: styles.css
