[project]
name = "bharattutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.5.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "streamlit>=1.32.0",
    "typing-extensions>=4.5.0",
]
